[package]
name = "p-layer-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"
rocket-multipart-form-data = "0.10.5"
mysql = "20.0.2"
serde = "1.0"
serde_json = "1.0"
rocket_contrib = { version = "0.4", features = ["json"] }
rand="*"
chrono="*"
tokio = { version = "1", features = ["full"] }